# rust-wasm-github

./: .gitignore  Cargo.toml  Trunk.toml  docker-compose.yml  index.html  package-lock.json  package.json  readme.md  rust-wasm-github-2f3c4dc656e6b209.js  rust-wasm-github-2f3c4dc656e6b209_bg.wasm  rust-wasm-github-32e434fe3258b8b3.js  rust-wasm-github-32e434fe3258b8b3_bg.wasm  rust-wasm-github-38ec7cf431628c8.js  rust-wasm-github-38ec7cf431628c8_bg.wasm  rust-wasm-github-3b3f06e773f65404_bg.wasm  rust-wasm-github-3d0f651b2c8a8ccb.js  rust-wasm-github-3d0f651b2c8a8ccb_bg.wasm  rust-wasm-github-40112d3aa3809aef_bg.wasm  rust-wasm-github-411c449ffe84d49b.js  rust-wasm-github-411c449ffe84d49b_bg.wasm  rust-wasm-github-44bb40023615502e.js  rust-wasm-github-44bb40023615502e_bg.wasm  rust-wasm-github-47917cd3166309f4.js  rust-wasm-github-47917cd3166309f4_bg.wasm  rust-wasm-github-4b50ceed2d30ea5_bg.wasm  rust-wasm-github-5b813734f8320f29_bg.wasm  rust-wasm-github-65d3158cfb98ee56.js  rust-wasm-github-65d3158cfb98ee56_bg.wasm  rust-wasm-github-679c1258ec469191.js  rust-wasm-github-679c1258ec469191_bg.wasm  rust-wasm-github-6eb9c31780b11149.js  rust-wasm-github-6eb9c31780b11149_bg.wasm  rust-wasm-github-71189431c7ebdcb5.js  rust-wasm-github-71189431c7ebdcb5_bg.wasm  rust-wasm-github-7462b1f3e36edb77.js  rust-wasm-github-7462b1f3e36edb77_bg.wasm  rust-wasm-github-75b690bea345e8f1.js  rust-wasm-github-75b690bea345e8f1_bg.wasm  rust-wasm-github-84eb3347d732b5a9.js  rust-wasm-github-84eb3347d732b5a9_bg.wasm  (+35 more)
backend/: Cargo.toml  Dockerfile
db/: .env  README.md  docker-compose.yml  (+1 more)
(+29 files in other folders)
