[package]
name = "rust-wasm-github"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
serde_json = "1.0"
serde = "1.0.204"
reqwest = { version = "0.12.5", features = ["json"] }
wasm-bindgen-futures = "0.4.42"
log = "0.4.22"
web-sys = "0.3.69"
plotters = "0.3.6"
plotters-canvas = "0.3.0"
wasm-bindgen = "0.2.92"

[build-dependencies]
dotenvy = "0.15.7"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["run-cargo-clippy", "run-cargo-fmt", "precommit-hook"]}
